@@ -108,7 +108,7 @@ sub _learn {
   my $ct = $h->content_type || '';
   $self->type('photo')->_learn_from_url               if $ct =~ m!^image/!;
   $self->type('video')->_learn_from_url               if $ct =~ m!^video/!;
-  $self->type('rich')->_learn_from_url                if $ct =~ m!^text/plain!;
+  $self->type('rich')->_learn_from_text($tx)          if $ct =~ m!^text/plain!;
   $self->type('rich')->_learn_from_dom($tx->res->dom) if $ct =~ m!^text/html!;
 
   return $self;
@@ -139,6 +139,18 @@ sub _learn_from_json {
   $self->{error}{code} = $self->{status}             if $self->{status}        and $self->{status} =~ /^\d+$/;
 
   return $self;
+}
+
+sub _learn_from_text {
+  my ($self, $tx) = @_;
+  $self->_learn_from_url;
+
+  $self->{paste} = $tx->res->text;
+  $self->template->[1] = 'paste.html.ep';
+
+  my $title = substr $self->{paste}, 0, 20;
+  $title =~ s![\r\n]+! !g;
+  $self->title($title);
 }
 
 sub _learn_from_url {
