@@ -14,7 +14,7 @@ get '/example' => 'example';
 get '/oembed'  => sub { $embedder->serve(shift) };
 get '/header'  => sub {
   my $c = shift;
-  $c->res->headers->header('X-Provider-Name', 'Convos');
+  $c->res->headers->content_type('text/plain')->header('X-Provider-Name', 'Convos');
   $c->render(text => 'X-Provider-Name example');
 };
 
@@ -33,7 +33,8 @@ $t->get_ok("/oembed.jsonp?callback=cb&url=$url")->status_is(200)
   ->content_like(qr{^cb\(\{.*"title":"example page".*\}\)$});
 
 $url = $t->ua->server->url->clone->path('/header');
-$t->get_ok("/oembed?url=$url")->status_is(200)->content_like(qr{class=\\"le-rich le-provider-convos\\"});
+$t->get_ok("/oembed?url=$url")->status_is(200)->content_like(qr{class=\\"le-paste le-provider-convos le-rich\\"})
+  ->content_like(qr{<pre>X-Provider-Name example});
 
 done_testing;
 
